--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
-    "@types/node": "18.11.11",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
     "clsx": "^1.2.1",
-    "nanoid": "^4.0.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "nanoid": "^4.0.0",
     "next": "13.0.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.3",
     "uuid": "^9.0.0"
   },
@@ -30,9 +31,9 @@
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
   }
 }
